--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-static==0.0.6
 django-allauth==0.25.2
 django-crispy-forms==1.6.0
 django-toolbelt==0.0.1
+djangorestframework==3.3.3
 gunicorn==19.4.5
 oauthlib==1.0.3
 postgres==2.2.1
@@ -13,6 +14,7 @@ python-openid==2.2.5
 requests==2.9.1
 requests-oauthlib==0.6.1
 static3==0.6.1
+stripe==1.31.0
 weixin==0.1
 whitenoise==2.0.6
 wsgiref==0.1.2
